--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="exit">Выход</string>
     <string name="exams">Экзамены</string>
 
+    <string name="grantsTab">Стипендии</string>
+    <string name="grantsPretendantTab">Претендант</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
