--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Личный кабинет студента</string>
 
     <!-- Main info -->
-    <string name="student_name">Имя</string>
+    <string name="student_name">Патрушев Олег</string>
     <string name="student_surname">Фамилия</string>
-    <string name="student_group">ПС-11</string>
+    <string name="student_group">ПС-21</string>
 
     <!-- Pages titles -->
     <string name="info">Обо мне</string>
